sygap-fix: font

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: var(--bg-body);
   height: 100vh;
   display: flex;
